G2-1483 Open more packages